fixed z-index bug (again)

--- a/src/components/PersonalSection/PersonalSection.css
+++ b/src/components/PersonalSection/PersonalSection.css
@@ -54,7 +54,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #181818;
+    /* background-color: #181818; */
     border-radius: 20px;
     display: flex;
     justify-content: space-evenly;
@@ -218,7 +218,7 @@
     align-items: center;
     justify-content: space-between;
     /* cursor: pointer; */
-    cursor: url('../../cursors/cursor_pointer.png'), auto;
+    cursor: url('../../cursors/cursor_pointer.svg'), auto;
 }
 
 .isometric__skillRatingWrapper {
@@ -236,8 +236,13 @@
     font-size: 40px;
     transform: translate(0, 0);
     /* box-shadow: -7px -7px 10px rgba(255, 255, 255, 0); */
-    transition: .3s;
+    transition: .1s;
     /* transition: box-shadow .5s; */
+}
+
+.isometric__skillRating:hover {
+    transform: translate(0, -2px);
+    transition: .1s;
 }
 
 .isometric__skillRating::before {
